2020-04-06 William Woodruff <william@trailofbits.com>
  * Allow dump_intel_format to take a keyword argument for
    suppressing the runtime address

2020-03-31 William Woodruff <william@trailofbits.com>
  * Fixed an incorrect function call in operand.c

2020-03-24 William Woodruff <william@trailofbits.com>
  * Bumped XED submodule to 4012555

2020-03-17 William Woodruff <william@trailofbits.com>
  * Added more accessor methods to pyxed.Operand

2020-03-10 William Woodruff <william@trailofbits.com>
  * Added mbuild as a submodule (for XED builds)
  * Added GitHub Actions-based CI

2019-08-28 Danny Quist
  * Added Python 3 support
  * Intel Xed as a sub-module
  * Build system now completely distools based

2018-07-05 huku <huku@grhack.net>

  * Fixed bug in `register_constants()' (issue #3, spotted by @majinxx297).
  * Updated "Makefile" to make it compatible with newer versions of XED
    (issue #2, spotted by @andermoran).
  * Minor "README.md" updates.


2016-10-06 huku <huku@grhack.net>

   * Added "setup.py" and modified makefiles accordingly.


2016-05-24 huku <huku@grhack.net>

    * Updated Windows makefiles and uploaded new precompiled binaries.


2016-04-29 huku <huku@grhack.net>

    * Fixed compilation problem introduced in previous commit (spotted by
      @imosukebe).


2016-04-01 huku <huku@grhack.net>

    * Removed unused `*args' argument in `M_NOARG' methods.
    * Fixed `NULL' pointer dereference in `new_rflags()' when trying to read
      EFLAGS/RFLAGS of an instruction that doesn't use it.
    * Various code clean-ups, especially in "instruction.c".
    * Renamed "written_regs.py" to "dump_written_regs.py" in "examples/".


2016-03-26 huku <huku@grhack.net>

    * Implemented `get_isa_set()' in class `Instruction'.


2016-03-25 huku <huku@grhack.net>

    * Tested latest version of Intel's XED, which now comes as a standalone
      library.
    * Updated "README.md".


2015-12-04 huku <huku@grhack.net>

    * Fixed typo in "decoder.h".