@@ -16,7 +16,8 @@ jobs:
           - "3.6"
           - "3.7"
           - "3.8"
-    runs-on: ubuntu-latest
+        platform: ["ubuntu-latest", "macos-latest"]
+    runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v2
       - name: Checkout submodules
@@ -31,3 +32,7 @@ jobs:
           python-version: ${{ matrix.python }}
       - name: build
         run: python3 setup.py build
+      - name: test
+        run: |
+          pip3 install .[dev]
+          pytest
