@@ -1,3 +1,7 @@
+2020-04-16 William Woodruff <william@trailofbits.com>
+  * Use a static build of XED in pyxed
+  * Add pytest-based unit tests
+
 2020-04-06 William Woodruff <william@trailofbits.com>
   * Allow dump_intel_format to take a keyword argument for
     suppressing the runtime address
